spool for csv and derived.

--- a/util/man/Plugin_store_csv.man
+++ b/util/man/Plugin_store_csv.man
@@ -20,12 +20,12 @@ The store_csv plugin is a CSV store.
 .PP
 
 .SH LDMSCTL MAIN CONFIGURATION ATTRIBUTE SYNTAX
-The configuration parameters altheader, id_pos, rolltype, rollover, and sequence are applied to all metric sets alike,
+The configuration parameters altheader, id_pos, rolltype, rollover, spooler, spooldir, and sequence are applied to all metric sets alike,
 unless overriden by the action=container values.
 
 .TP
 .BR config
-name=<plugin_name> [action=main] path=<path> [ altheader=<altheader> id_pos=<idpos> rolltype=<rolltype> rollover=<rollover> sequence=<seqname> ]
+name=<plugin_name> [action=main] path=<path> [ altheader=<altheader> id_pos=<idpos> rolltype=<rolltype> rollover=<rollover> sequence=<seqname> spooldir=<dir> spooler=<program>]
 .br
 ldmsctl configuration line
 .RS
@@ -82,6 +82,14 @@ Rollover value controls the frequency of rollover (e.g., number of bytes, number
 sequence=<seqname>
 .br
 Controls the ordering of metric data column. See STORE COLUMN ORDERING for details.
+.TP
+spooler=<program>
+.br
+The full path of the program invoked as '<program> file <spooldir>' to relocate output files. Both spooler and spooldir must exist or spooling is ignored. Due to possible race conditions, the program must validate its input and log any errors encountered. LDMS does not monitor the outcome of the program invocation. Program may be a shell script that handles complex spooling behavior including changing file permission, ownership, location, or passing to the data import tools of another logging system. When separate header and data files are produced, both are moved to spooldir with separate invocations of spooler. The order of completion of spooler for a header file and its data file is up to the operating system. The program is free to ignore the spooldir input value, but it must nevertheless exist at store container creation time. 
+.TP
+spooldir=<directory>
+.br
+The full path in which to deposit closed output files. In some circumstances the final output of an exiting ldms-aggd may not be spooled.
 .RE
 
 .SH LDMSCTL CONTAINER CONFIGURATION ATTRIBUTE SYNTAX
@@ -140,7 +148,7 @@ ode/meminfo.
 .TP
 container=<container>
 .br
-The output files will be put into a directory whose root is specified by the path argument. This directory must exist; the subdirectories and files will be created. The full path to the output files will be <path>/<comp_type>/<container>. Typically these are chosen to make output files like: XXX/store_csv/node/meminfo.
+The output files will be opened in a directory whose root is specified by the path argument. This directory must exist; the subdirectories and files will be created. The full path to the output files will be <path>/<comp_type>/<container>. Typically these are chosen to make output files like: XXX/store_csv/node/meminfo.
 
 Use an unique container parameter for different metric sets coming from different sampler (e.g., do not use the same container for procstatutil and meminfo); however, use the same container for the same metric set coming from all hosts (e.g., for all meminfo).
 
